fixed z-index issues

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -57,6 +57,7 @@
 
     &__icon {
         position: fixed;
+        z-index: 10;
         top: 2rem;
         right: 1rem;
         display: flex;
@@ -81,6 +82,7 @@
 
     &__links {
         position: fixed;
+        z-index: 10;
         top: 6rem;
         right: 1.5rem;
         list-style: none;
